<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MostraReceita">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_mostrareceita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_mostra_receita"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextColor="@color/white"
            app:contentScrim="@color/yellow"
            app:expandedTitleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageview_mostra_receita"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_titulo_ingredientes_receita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="Ingredientes"
                app:layout_anchor="@id/appbar_mostrareceita"
                app:layout_anchorGravity="bottom" />

            <LinearLayout
                android:id="@+id/linearlayout_mostra_ingredientes_receita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_anchor="@id/textview_titulo_ingredientes_receita"
                app:layout_anchorGravity="bottom">

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_titulo_descricao_receita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/modo_de_preparo_mostra_receita"
                app:layout_anchor="@id/linearlayout_mostra_ingredientes_receita"
                app:layout_anchorGravity="bottom" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_mostra_descricao_receita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                app:layout_anchor="@id/textview_titulo_descricao_receita"
                tools:text="Descrição" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_titulo_porcao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Rendimento"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_mostra_porcao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="porção" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/porcoes_mostra_receita" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_titulo_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Categoria" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_mostra_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Categoria"
                android:textSize="20sp"
                app:layout_anchor="@id/textview_titulo_categoria"
                app:layout_anchorGravity="bottom" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_voltar_lista_de_receitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/voltar"
        app:icon="@drawable/ic_back"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
         />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_editar_receita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/editar"
        app:icon="@drawable/ic_edit"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
         />


</androidx.coordinatorlayout.widget.CoordinatorLayout>

