<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FormularioDeReceitas"
    android:fillViewport="true"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_formulario_de_receitas"
            layout="@layout/frame_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Nova Receita"
            app:titleTextColor="@color/white" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_excluir_receita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:background="@drawable/button_effect"
            android:backgroundTint="@color/lightpink"
            app:layout_constraintTop_toTopOf="@id/toolbar_formulario_de_receitas"
            app:layout_constraintBottom_toBottomOf="@id/toolbar_formulario_de_receitas"
            app:layout_constraintEnd_toEndOf="@id/toolbar_formulario_de_receitas"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_receita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="300dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar_formulario_de_receitas"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_adicionar_imagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageview_receita"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:text="@string/button_escolher_imagem"
            android:padding="10dp"
            android:background="@drawable/imagebutton_effect"
            android:backgroundTint="@color/lightpink"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="Nome da Receita"
                app:layout_constraintTop_toBottomOf="@id/button_adicionar_imagem"
                app:layout_constraintStart_toStartOf="parent"
                />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_nome_da_receita"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/text_nome"
                android:hint="Nome"
                android:inputType="text"
                android:maxLength="40"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_ingredientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edittext_nome_da_receita"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="10dp"
                android:text="Ingredientes"
                />
        <LinearLayout
            android:id="@+id/view_ingredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/text_ingredientes"
            android:layout_marginStart="10dp">


        </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_ingredientes_da_receitas"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/view_ingredientes"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/ingredientes"
                android:inputType="textMultiLine"
                android:maxLines="8"
                android:minHeight="50dp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/button_adiciona_ingrediente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/edittext_ingredientes_da_receitas"
                app:layout_constraintBottom_toBottomOf="@id/edittext_ingredientes_da_receitas"
                app:layout_constraintStart_toEndOf="@id/edittext_ingredientes_da_receitas"
                android:src="@drawable/ic_add"
                android:translationZ="@dimen/cardview_default_elevation"
                android:background="@drawable/button_effect"
                android:tint="@color/black"
                />




            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_descricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edittext_ingredientes_da_receitas"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="10dp"
                android:text="@string/modo_de_preparo"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_descricao_da_receitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_descricao"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/descricao"
                android:inputType="textMultiLine"
                android:maxLines="15"
                android:minHeight="50dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_porcao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edittext_descricao_da_receitas"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="10dp"
                android:text="Porção"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edittext_porcao_da_receita"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/text_porcao"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:hint="porção"
                android:inputType="number" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edittext_porcao_da_receita"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="10dp"
                android:text="Categoria"
                />

            <Spinner
                android:id="@+id/spinner_categoria"
                android:layout_width="200dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/text_categoria"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_salvar_receita"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/imagebutton_effect"
                android:text="Salvar Receita"
                app:layout_constraintTop_toBottomOf="@id/spinner_categoria"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
